--- a/app/globals.css
+++ b/app/globals.css
@@ -23,9 +23,7 @@ body {
   .btn_white_text  { 
     @apply  border-white bg-white px-8 py-3 text-green-90
   }
-  .btn_green  { 
-    @apply  border-green-50 bg-green-50 px-8 py-5 text-white
-  }
+  
   .btn_purple { 
     @apply  bg-[#5D50C6] px-8 py-4 text-white transition-all hover:bg-[#5D50C6]
   }
@@ -125,17 +123,14 @@ body {
 
   /* Hero */
   .hero-map {
-    @apply absolute right-0 top-0 h-screen w-screen bg-pattern-2 bg-cover bg-center md:-right-28 xl:-top-60;
+    @apply absolute right-2 top-2 h-screen w-screen bg-pattern-2 bg-cover bg-center md:-right-28 xl:-top-60;
   }
 
-  /* Camp */
-  .camp-quote {
-    @apply absolute -right-6 bottom-4 w-[140px] lg:bottom-10 xl:-right-8 xl:w-[186px] 3xl:right-0;
-  }
+  
 
   /* Feature */
   .feature-phone {
-    @apply absolute top-[13%] z-10 hidden max-w-[1500px] rotate-[15deg] md:-left-16 lg:flex  3xl:left-20;
+    @apply absolute ml-[-5] z-10 hidden max-w-[1500px] md:-left-16 lg:flex  3xl:left-20;
   }
 
   /* Get App */
@@ -144,12 +139,10 @@ body {
   }
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
 .hide-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
